crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_does_not_link_type_parameters_of_a_nested_member__html_list.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>6</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>5</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Settings](./interfaces/Settings.md) | Settings. |

## Type Aliases

| Type Alias | Description |
| ------ | ------ |
| [Box](./type-aliases/Box.md) |  |
| [K](./type-aliases/K.md) |  |
| [Options](./type-aliases/Options.md) |  |
| [T](./type-aliases/T.md) |  |
| [U](./type-aliases/U.md) |  |

===== combinators/interfaces/Settings.md =====
# Interface: Settings

<div id="settings" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">1 member</span></span>
<div class="ox-api-entry__prose">
<p>Settings.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Settings(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<ul class="ox-api-entry__members-list">
<li id="property-handlers" class="ox-api-entry__member">
  <div class="ox-api-entry__member-heading">
    <code class="ox-api-entry__member-name">handlers</code>
    <span class="ox-api-entry__member-kind">property</span>
    <code class="ox-api-entry__member-type language-typescript">Handlers</code>
  </div>
  <div class="ox-api-entry__member-description">The handlers.</div>
<ul class="ox-api-entry__property-members-list">
<li class="ox-api-entry__property-member"><div class="ox-api-entry__property-member-heading"><code>map</code> <code class="ox-api-entry__member-type language-typescript">(value: U) =&gt; U</code></div><div class="ox-api-entry__property-member-description"><ul class="ox-api-entry__type-parameters"><li class="ox-api-entry__type-parameter"><div class="ox-api-entry__type-parameter-heading"><code>U</code></div></li></ul><ul class="ox-api-entry__member-params"><li><code>value</code></li></ul></div></li>
</ul>
</li>
</ul>
</div>
</div>
</div>
===== combinators/type-aliases/Box.md =====
# Type Alias: Box

<div id="box" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/K.md =====
# Type Alias: K

<div id="k" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/Options.md =====
# Type Alias: Options

<div id="options" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/T.md =====
# Type Alias: T

<div id="t" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/U.md =====
# Type Alias: U

<div id="u" class="ox-api-entry ox-api-entry--page">

</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>6</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>5</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
